--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -2,7 +2,7 @@
 <div class="flex-1 flex flex-col justify-stretch min-h-0 min-w-0 lg:w-3/5">
   <section class="flex-1 flex flex-col min-h-0 mt-2 justify-stretch">
     <ul class="flex-none flex flex-col min-h-0 divide-y divide-gray-100" role="list">
-      <li class="flex flex-row flex-none">
+      <li class="show-desktop-only flex flex-row flex-none">
         <div class="flex-none w-8">
         </div>
         <div class="flex-1 min-w-0 leading-6 text-gray-900">
@@ -146,6 +146,31 @@
       notcurrent-class="flex-none flex flex-col min-h-0 min-w-0"
     >
       <div class="flex-none flex flex-col min-h-0 min-w-0">
+        <div class="mt-4 mb-4 show-mobile-only flex flex-row flex-none">
+          <div class="flex-none w-8">
+          </div>
+          <div class="flex-1 min-w-0 leading-6 text-gray-900">
+            <div>
+              <form
+                phx-submit="create"
+                id="form"
+              >
+                <div class="flex">
+                  <input
+                    class="flex-1 bg-yellow-100 focus:bg-yellow-50 focus:ring-0 font-semibold text-sm border-none p-0"
+                    id="new_todo"
+                    type="text"
+                    name="text"
+                    placeholder="Enter new task..."
+                    autofocus=""
+                    required="required"                  
+                  />
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="flex-none w-28"></div>
+        </div>
         <ul class="flex-none flex flex-row min-w-0 min-h-0 text-sm font-sm text-center text-gray-500 border-t border-gray-200 dark:border-gray-700 dark:text-gray-400">
           <li class="flex-grow-1 flex flex-col min-w-0 min-h-0">
             <.link 
