--- a/lib/auth2024_web/live/edit_person_live.html.heex
+++ b/lib/auth2024_web/live/edit_person_live.html.heex
@@ -17,14 +17,17 @@
       <Auth2024Web.CoreComponents.input 
         id="edit_person-email"
         field={@edit_person_form[:email]} 
+        label="email"
       />
       <Auth2024Web.CoreComponents.input 
         id="edit_person-family_name"
         field={@edit_person_form[:family_name]} 
+        label="family name"
       />
       <Auth2024Web.CoreComponents.input 
         id="edit_person-given_name"
         field={@edit_person_form[:given_name]} 
+        label="given name"
       />
       <Auth2024Web.CoreComponents.input 
         id="edit_person-id"
