--- a/lib/auth2024_web/live/confirm_new_person_live.html.heex
+++ b/lib/auth2024_web/live/confirm_new_person_live.html.heex
@@ -28,6 +28,7 @@
         field={@new_person_form[:family_name]} 
       />
       <Auth2024Web.CoreComponents.input 
+        id="new-person-form-given-name"
         label="given name"
         field={@new_person_form[:given_name]} 
       />
