--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -240,6 +240,7 @@
   current_user={@current_user}
   available_persons={@available_persons}
   session={@current_session}
+  zIndex={50}
 />
 
 <!-- TXWTODO: Fix z order -->
@@ -249,5 +250,6 @@
   module={Auth2024Web.ConfirmNewPersonLive}
   user={@current_user}
   session={@current_session}
+  zIndex={70}
 />
 
