- fixed wrong behaviour of displaying a person in a dialog

--- a/lib/auth2024_web/live/edit_person_live.html.heex
+++ b/lib/auth2024_web/live/edit_person_live.html.heex
@@ -16,16 +16,19 @@
     >
       <Auth2024Web.CoreComponents.input 
         id="edit_person-family_name"
+        phx-hook="SetValue"
         field={@edit_person_form[:family_name]} 
         label="family name"
       />
       <Auth2024Web.CoreComponents.input 
         id="edit_person-given_name"
+        phx-hook="SetValue"
         field={@edit_person_form[:given_name]} 
         label="given name"
       />
       <Auth2024Web.CoreComponents.input 
         id="edit_person-email"
+        phx-hook="SetValue"
         field={@edit_person_form[:email]} 
         label="email"
       />
