- added default focus

--- a/lib/auth2024_web/live/edit_todo_live.html.heex
+++ b/lib/auth2024_web/live/edit_todo_live.html.heex
@@ -1,7 +1,7 @@
 <div id={"edit_todo_top-#{@id}"} class="top-2 right-2 fixed z-30">
   <Auth2024Web.CoreComponents.modal 
     id={"edit_todo_modal-#{@id}"}
-    phx-hook="ModalCloser"
+    phx-hook="ModalClogirt r"
   >
     <Auth2024Web.CoreComponents.header>
       <:subtitle>
