- added schemes for tags and notes.

--- a/lib/auth2024_web/live/edit_person_live.html.heex
+++ b/lib/auth2024_web/live/edit_person_live.html.heex
@@ -5,7 +5,7 @@
   >
     <Auth2024Web.CoreComponents.header>
       <:subtitle>
-        Edit item
+        Edit Person
       </:subtitle>
     </Auth2024Web.CoreComponents.header> 
 
