- begin of refactoring.

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -63,7 +63,7 @@
                       phx-select={JS.dispatch("submit", to: "#" <> form_todo_contact_due_id(group_header))}
                       value=""
                     />
-                    <button class="" type="button">&gt;&gt;</button>
+                    <button class="" type="button">bla&gt;&gt;</button>
                     <input type="hidden" name="contact_id" value={group_header.id}/>
                   </form>
                 </div>
