--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -90,6 +90,8 @@
                   <input class="toggle" type="checkbox" phx-value-item_id={item.id} phx-click="toggle" 
                   />
                 <% end %>
+                <!-- span class="text-yellow-400">&#x2022;</span -->
+                <span class="text-red-600">&#x2022;</span>
               </div>
             </div>
             <div 
