- loading environment from file, addad solo_contact

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -48,6 +48,9 @@
                     <span phx-click="on-header-click" phx-value-header={group_header.id}>
                       <.icon name="hero-plus-solid" class="h-4 w-4"/>
                     </span>
+                    <span phx-click="on-solo-click" phx-value-header={group_header.id}>
+                      <.icon name="hero-arrows-pointing-out-solid" class="h-4 w-4"/>
+                    </span>
                   </p>
                 </div>
                 <div class="flex-1 flex min-w-0 min-h-0">
